--- a/index.html
+++ b/index.html
@@ -1,13 +1,138 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Transit Flow</title>
-    <link rel="stylesheet" href="./styles/style.css">
-    <link rel="shortcut icon" href="../assets/icons/Logo_fav.svg" type="image/x-icon">
-</head>
-<body>
-    
-</body>
+    <link rel="stylesheet" href="./styles/style.css" />
+    <link
+      rel="shortcut icon"
+      href="../assets/icons/Logo_fav.svg"
+      type="image/x-icon"
+    />
+  </head>
+  <body>
+    <header>
+      <footer class="footer-1">
+        <div class="container">
+          <img width="150" src="./assets/images/Logo.svg" alt="" />
+          <div class="footer-card">
+            <div class="footer-card-item">
+              <img width="50" src="./assets/icons/time_icon.svg" alt="" />
+              <p class="primary-text">
+                Mon - Sat 9.00 - 18.00 <br />
+                Sunday Closed
+              </p>
+            </div>
+            <div class="footer-card-item">
+              <img width="50" src="./assets/icons/email_icon.svg" alt="" />
+              <p class="primary-text">
+                Email <br />
+                contact@logistics.com
+              </p>
+            </div>
+            <div class="footer-card-item">
+              <img width="50" src="./assets/icons/tel_icon.svg" alt="" />
+              <p class="primary-text">
+                Call Us <br />
+                (00) 112 365 489
+              </p>
+            </div>
+          </div>
+        </div>
+      </footer>
+    </header>
+    <main>
+      <section class="section-1">
+        <footer class="footer-2">
+          <div class="container">
+            <nav>
+              <a href="./index.html">Home</a>
+              <a href="./pages/about.html">About</a>
+              <a href="#">Pages</a>
+              <a href="#">Project</a>
+              <a href="#">Contact</a>
+            </nav>
+            <div class="nav-item">
+              <div class="social-links">
+                <a href=""><img src="./assets/icons/Instagram.svg" alt="" /></a>
+                <a href=""><img src="./assets/icons/Facebook.svg" alt="" /></a>
+                <a href=""><img src="./assets/icons/Twitter.svg" alt="" /></a>
+                <a href=""><img src="./assets/icons/Linkdin.svg" alt="" /></a>
+              </div>
+              <button>Request Quote</button>
+            </div>
+          </div>
+        </footer>
+        <div class="container s1">
+          <div class="title">
+            <p class="s1-info">Logistics & Supply Chain Solutions</p>
+            <h1>
+              Your Gateway <br />
+              to any Destination <br />
+              in the World
+            </h1>
+            <p class="primary-text">
+              In augue ligula, feugiat ut nulla consequat. Ut est lacus,
+              molestie in arcu <br />
+              no, iaculis vehicula ipsum. Nunc faucibus, nisl id dapibus
+              finibus, enim <br />
+              diam interdum nulla, sed laoreet risus lectus.
+            </p>
+            <button class="secondary-btn">Explore More</button>
+          </div>
+        </div>
+      </section>
+      <section class="section-2">
+        <div class="container">
+          <div class="s2-title">
+            <p class="s1-info s2-info">What We Do</p>
+            <h2>Safe & Reliable Cargo Solutions</h2>
+          </div>
+          <div class="s2-cards">
+            <div class="s2-card">
+              <img src="./assets/icons/ship.svg" alt="" />
+              <div class="s2-card-title">
+                <h4>Sea Transport Services</h4>
+                <p style="color: #666c89" class="primary-text">
+                  Following the quality of our service thus having gained trust
+                  of our many clients.
+                </p>
+              </div>
+            </div>
+            <div class="s2-card">
+              <img src="./assets/icons/services.svg" alt="" />
+              <div class="s2-card-title">
+                <h4>Warehousing Services</h4>
+                <p style="color: #666c89" class="primary-text">
+                  Following the quality of our service thus having gained trust
+                  of our many clients.
+                </p>
+              </div>
+            </div>
+            <div style="gap: 10px" class="s2-card">
+              <img src="./assets/icons/plan.svg" alt="" />
+              <div class="s2-card-title">
+                <h4>Air Fright Services</h4>
+                <p style="color: #666c89" class="primary-text">
+                  Following the quality of our service thus having gained trust
+                  of our many clients.
+                </p>
+              </div>
+            </div>
+            <div class="s2-card">
+              <img src="./assets/icons/gruz.svg" alt="" />
+              <div class="s2-card-title">
+                <h4>Local Shipping Services</h4>
+                <p style="color: #666c89" class="primary-text">
+                  Following the quality of our service thus having gained trust
+                  of our many clients.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
+  </body>
 </html>
