--- a/index.html
+++ b/index.html
@@ -133,6 +133,89 @@
           </div>
         </div>
       </section>
+      <section class="section-3">
+        <img class="s3-bgi" src="./assets/images/s3-bgi.png" alt="" /><br />
+        <div class="s3-title">
+          <div>
+            <p class="s1-info s2-info">Why Us</p>
+            <h2>We provide full range global logistics solution</h2>
+            <p style="color: #666c89; margin-bottom: 20px" class="primary-text">
+              Leverage agile frameworks to provide a robust synopsis for
+              strategy foster collaborative thinking to further the overall
+              value proposition. <br />
+              <br />
+              Organically grow the holistic world view of disruptive innovation
+              via workplace diversity and empowerment.
+            </p>
+            <div class="s3-txt">
+              <img src="./assets/icons/box.svg" alt="" />
+              <p>Delivery on Time</p>
+            </div>
+            <div class="s3-txt">
+              <img src="./assets/icons/money.svg" alt="" />
+              <p>Optimized Travel Cost</p>
+            </div>
+          </div>
+          <img width="550" src="./assets/images/s3-plane.png" alt="" />
+        </div>
+        <div class="clients">
+          <div style="border-right: 1px solid #d4d4d4" class="clients-item">
+            <h3>1294</h3>
+            <img src="./assets/icons/Pattern.svg" alt="" />
+            <p>Delivered Packages</p>
+          </div>
+          <div class="clients-item">
+            <h3>3594</h3>
+            <img src="./assets/icons/Pattern.svg" alt="" />
+            <p>Satisfied Clients</p>
+          </div>
+        </div>
+      </section>
+      <section class="section-4">
+        <h2 style="text-align: center; margin-bottom: 25px">
+          Transporting Across The World
+        </h2>
+        <div class="s4-cards">
+          <div class="from-pstn">
+            <div class="s4-card">
+              <h5>Liquid Transportation</h5>
+              <p>Premium Tankers</p>
+            </div>
+          </div>
+          <div class="from-pstn">
+            <div class="s4-card">
+              <h5>Liquid Transportation</h5>
+              <p>Premium Tankers</p>
+            </div>
+          </div>
+          <div class="from-pstn">
+            <div class="s4-card">
+              <h5>Liquid Transportation</h5>
+              <p>Premium Tankers</p>
+            </div>
+          </div>
+          <div class="from-pstn">
+            <div class="s4-card">
+              <h5>Liquid Transportation</h5>
+              <p>Premium Tankers</p>
+            </div>
+          </div>
+          <div class="from-pstn">
+            <div class="s4-card">
+              <h5>Liquid Transportation</h5>
+              <p>Premium Tankers</p>
+            </div>
+          </div>
+          <div class="from-pstn">
+            <div class="s4-card">
+              <h5>Liquid Transportation</h5>
+              <p>Premium Tankers</p>
+            </div>
+          </div>
+        </div>
+        <button class="secondary-btn">More Work</button>
+        <img class="s4-bgi" src="./assets/images/s4-bgi.svg" alt="" />
+      </section>
     </main>
   </body>
 </html>
