--- a/index.html
+++ b/index.html
@@ -216,6 +216,55 @@
         <button class="secondary-btn">More Work</button>
         <img class="s4-bgi" src="./assets/images/s4-bgi.svg" alt="" />
       </section>
+      <section class="section-5">
+        <div class="container">
+          <div class="s5-title">
+            <div>
+              <p class="s1-info s2-info">Testimonial</p>
+              <h2>What Our Customer Say</h2>
+            </div>
+            <img src="./assets/icons/Aerrow.svg" alt="">
+          </div>
+          <div class="s5-cards">
+            <div style="background-color: #F4F4F4;" class="s5-card">
+              <div class="s5-card-title">
+                <div class="s5-card-title-img">
+                  <img src="./assets/images/kathleen.png" alt="">
+                  <div>
+                    <h4>Kathleen Smith</h4>
+                    <p>Fuel Company</p>
+                  </div>
+                </div>
+              </div>
+              <p class="s5-text">Leverage agile frameworks to provide a robust synopsis for strategy foster collaborative
+                thinking to
+                further the overall
+                value proposition. Organically grow the holistic world view of disruptive innovation via workplace diversity
+                and
+                empowerment.</p>
+              <img width="120" src="./assets/images/Star.png" alt="">
+            </div>
+            <div style="color:#fff;" class="s5-card">
+              <div class="s5-card-title">
+                <div class="s5-card-title-img">
+                  <img src="./assets/images/john.png" alt="">
+                  <div>
+                    <h4>John Martin</h4>
+                    <p>Restoration Company</p>
+                  </div>
+                </div>
+              </div>
+              <p style="color: #fff;" class="s5-text">Leverage agile frameworks to provide a robust synopsis for strategy
+                foster collaborative thinking to
+                further the overall
+                value proposition. Organically grow the holistic world view of disruptive innovation via workplace diversity
+                and
+                empowerment.</p>
+              <img width="118" src="./assets/images/Star.png" alt="">
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
