--- a/index.html
+++ b/index.html
@@ -223,44 +223,100 @@
               <p class="s1-info s2-info">Testimonial</p>
               <h2>What Our Customer Say</h2>
             </div>
-            <img src="./assets/icons/Aerrow.svg" alt="">
+            <img src="./assets/images/Aerrow.svg" alt="" />
           </div>
           <div class="s5-cards">
-            <div style="background-color: #F4F4F4;" class="s5-card">
+            <div style="background-color: #f4f4f4" class="s5-card">
               <div class="s5-card-title">
                 <div class="s5-card-title-img">
-                  <img src="./assets/images/kathleen.png" alt="">
+                  <img width="80" src="./assets/images/kathleen.png" alt="" />
                   <div>
                     <h4>Kathleen Smith</h4>
                     <p>Fuel Company</p>
                   </div>
                 </div>
               </div>
-              <p class="s5-text">Leverage agile frameworks to provide a robust synopsis for strategy foster collaborative
-                thinking to
-                further the overall
-                value proposition. Organically grow the holistic world view of disruptive innovation via workplace diversity
-                and
-                empowerment.</p>
-              <img width="120" src="./assets/images/Star.png" alt="">
+              <p class="s5-text">
+                Leverage agile frameworks to provide a robust synopsis for
+                strategy foster collaborative thinking to further the overall
+                value proposition. Organically grow the holistic world view of
+                disruptive innovation via workplace diversity and empowerment.
+              </p>
+              <img width="120" src="./assets/icons/Star.svg" alt="" />
             </div>
-            <div style="color:#fff;" class="s5-card">
+            <div style="color: #fff" class="s5-card">
               <div class="s5-card-title">
                 <div class="s5-card-title-img">
-                  <img src="./assets/images/john.png" alt="">
+                  <img width="80" src="./assets/images/john.png" alt="" />
                   <div>
                     <h4>John Martin</h4>
                     <p>Restoration Company</p>
                   </div>
                 </div>
               </div>
-              <p style="color: #fff;" class="s5-text">Leverage agile frameworks to provide a robust synopsis for strategy
-                foster collaborative thinking to
-                further the overall
-                value proposition. Organically grow the holistic world view of disruptive innovation via workplace diversity
-                and
-                empowerment.</p>
-              <img width="118" src="./assets/images/Star.png" alt="">
+              <p style="color: #fff" class="s5-text">
+                Leverage agile frameworks to provide a robust synopsis for
+                strategy foster collaborative thinking to further the overall
+                value proposition. Organically grow the holistic world view of
+                disruptive innovation via workplace diversity and empowerment.
+              </p>
+              <img width="118" src="./assets/icons/Star.svg" alt="" />
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="section-6">
+        <div class="containerr">
+          <div class="s6-imgs">
+            <img
+              width="165%"
+              height="100%"
+              src="./assets/images/s5-bg.svg"
+              alt=""
+            />
+            <img
+              class="s6-plane"
+              width="700"
+              src="./assets/images/s5-plane.png"
+              alt=""
+            />
+          </div>
+          <div class="s6-title">
+            <p class="s1-info s2-info">Why Choose</p>
+            <h2>
+              We create opportunity to <br />
+              reach potential
+            </h2>
+            <p class="primary-text">
+              Leverage agile frameworks to provide a robust synopsis for <br />
+              strategy foster collaborative thinking to further the overall
+              value proposition.
+            </p>
+            <div class="s6-icons">
+              <div class="s3-txt">
+                <img src="./assets/icons/package.svg" alt="" />
+                <p>Safe Package</p>
+              </div>
+              <div class="s3-txt">
+                <img src="./assets/icons/package.svg" alt="" />
+                <p>Safe Package</p>
+              </div>
+              <div class="s3-txt">
+                <img src="./assets/icons/package.svg" alt="" />
+                <p>Safe Package</p>
+              </div>
+              <div class="s3-txt">
+                <img src="./assets/icons/package.svg" alt="" />
+                <p>Safe Package</p>
+              </div>
+              <div class="s3-txt">
+                <img src="./assets/icons/package.svg" alt="" />
+                <p>Safe Package</p>
+              </div>
+              <div class="s3-txt">
+                <img src="./assets/icons/package.svg" alt="" />
+                <p>Safe Package</p>
+              </div>
             </div>
           </div>
         </div>
