--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Transit Flow</title>
     <link rel="stylesheet" href="./styles/style.css" />
+    <link rel="stylesheet" href="./styles/section-7.css" />
     <link
       rel="shortcut icon"
       href="../assets/icons/Logo_fav.svg"
@@ -316,6 +317,67 @@
               <div class="s3-txt">
                 <img src="./assets/icons/package.svg" alt="" />
                 <p>Safe Package</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="section-7">
+        <div class="Team">
+          <div class="navv-2">
+            <img src="../assets/images/Pattern.svg" alt="" />
+            <p class="van">The Transporters</p>
+          </div>
+          <div class="team">
+            <b>Meet Expert Team</b>
+          </div>
+          <div class="team-1">
+            <div class="team-2">
+              <div class="team-3">
+                <img src="../assets/images/jes-0.svg" alt="" />
+              </div>
+              <div class="team-4">
+                <div class="team-5">
+                  <h2 style="font-size: 20px">Jessca Arow</h2>
+                  <b>Designer</b>
+                </div>
+                <div class="team-6">
+                  <img src="../assets/images/jes-1.svg" alt="" />
+                  <img src="../assets/images/jes-2.svg" alt="" />
+                  <img src="../assets/images/jes-3.svg" alt="" />
+                </div>
+              </div>
+            </div>
+            <div class="team-2">
+              <div class="team-3">
+                <img src="../assets/images/Image-9.svg" alt="" />
+              </div>
+              <div class="team-4">
+                <div class="team-5">
+                  <h2 style="font-size: 20px">Jessca Arow</h2>
+                  <b>Designer</b>
+                </div>
+                <div class="team-7">
+                  <img src="../assets/images/In-0.svg" alt="" />
+                  <img src="../assets/images/jes-1.svg" alt="" />
+                  <img src="../assets/images/jes-2.svg" alt="" />
+                  <img src="../assets/images/jes-3.svg" alt="" />
+                </div>
+              </div>
+            </div>
+            <div class="team-2">
+              <div class="team-3">
+                <img src="../assets/images/Photo-11.svg" alt="" />
+              </div>
+              <div class="team-4">
+                <div class="team-5">
+                  <h2 style="font-size: 20px">Jessca Arow</h2>
+                  <b>Designer</b>
+                </div>
+                <div class="team-8">
+                  <img src="../assets/images/jes-2.svg" alt="" />
+                  <img src="../assets/images/jes-3.svg" alt="" />
+                </div>
               </div>
             </div>
           </div>
