--- a/index.html
+++ b/index.html
@@ -383,6 +383,62 @@
           </div>
         </div>
       </section>
+      <section class="section-8">
+        <footer class="s8-footer">
+          <div class="s8-footer-main">
+            <div class="s8-footer-title">
+              <p class="s1-info">Contact</p>
+              <h2 style="color: #fff; margin-bottom: 5px">
+                Get in touch with us
+              </h2>
+              <p style="margin-bottom: 25px" class="primary-text">
+                Leverage agile frameworks to provide a robust <br />
+                synopsis for strategy foster collaborative <br />
+                thinking to further the overall value.
+              </p>
+              <div class="footer-card-item">
+                <img width="50" src="./assets/icons/time_icon.svg" alt="" />
+                <p class="primary-text">
+                  Mon - Sat 9.00 - 18.00 <br />
+                  Sunday Closed
+                </p>
+              </div>
+              <br />
+              <div class="footer-card-item">
+                <img width="50" src="./assets/icons/email_icon.svg" alt="" />
+                <p class="primary-text">
+                  Email <br />
+                  contact@logistics.com
+                </p>
+              </div>
+              <br />
+              <div class="footer-card-item">
+                <img width="50" src="./assets/icons/tel_icon.svg" alt="" />
+                <p class="primary-text">
+                  Call Us <br />
+                  (00) 112 365 489
+                </p>
+              </div>
+            </div>
+            <form>
+              <input class="main-input" type="text" placeholder="Your name*" />
+              <input class="main-input" type="text" placeholder="Your name*" />
+              <br />
+              <input class="main-input" type="text" placeholder="Your name*" />
+              <input class="main-input" type="text" placeholder="Your name*" />
+              <br />
+              <input
+                class="main-input your-m"
+                type="text"
+                placeholder="Your Message"
+              />
+              <br>
+              <button class="secondary-btn">Submit Message</button>
+            </form>
+          </div>
+          <img width="100%" src="./assets/images/Client Logo.png" alt="">
+        </footer>
+      </section>
     </main>
   </body>
 </html>
