--- a/index.html
+++ b/index.html
@@ -432,11 +432,165 @@
                 type="text"
                 placeholder="Your Message"
               />
-              <br>
+              <br />
               <button class="secondary-btn">Submit Message</button>
             </form>
           </div>
-          <img width="100%" src="./assets/images/Client Logo.png" alt="">
+          <img width="100%" src="./assets/images/Client Logo.png" alt="" />
+        </footer>
+      </section>
+      <section class="section-9">
+        <div class="container">
+          <p class="s1-info s2-info">Our Blog</p>
+          <br />
+          <h2 style="text-align: center; margin-bottom: 40px">
+            Our Latest News
+          </h2>
+          <div class="s9-item">
+            <img width="420" src="./assets/images/s91.png" alt="" />
+            <div class="s9-calendar">
+              <img src="./assets/icons/calendar.svg" alt="" />
+              <h2 style="margin-top: 0">08</h2>
+              <p style="color: #666c89" class="primary-text">September</p>
+            </div>
+            <div class="s9-item-title">
+              <p class="sit-title">
+                Inland freight a worthy solution for your business
+              </p>
+              <p style="color: #666c89" class="primary-text">
+                We are dedicated in creating added value for our customers by
+                implementing modern technology in our work.
+              </p>
+              <br />
+              <br />
+              <ul>
+                <li>Urgent transport solutions</li>
+                <li>Urgent transport solutions</li>
+                <li>Urgent transport solutions</li>
+                <li>Urgent transport solutions</li>
+              </ul>
+            </div>
+          </div>
+          <div class="s9-item">
+            <img width="420" src="./assets/images/s91.png" alt="" />
+            <div class="s9-calendar">
+              <img src="./assets/icons/calendar.svg" alt="" />
+              <h2 style="margin-top: 0">08</h2>
+              <p style="color: #666c89" class="primary-text">September</p>
+            </div>
+            <div class="s9-item-title">
+              <p class="sit-title">
+                Inland freight a worthy solution for your business
+              </p>
+              <p style="color: #666c89" class="primary-text">
+                We are dedicated in creating added value for our customers by
+                implementing modern technology in our work.
+              </p>
+              <br />
+              <br />
+              <ul>
+                <li>Urgent transport solutions</li>
+                <li>Urgent transport solutions</li>
+                <li>Urgent transport solutions</li>
+                <li>Urgent transport solutions</li>
+              </ul>
+            </div>
+          </div>
+          <div class="s9-item">
+            <img width="420" src="./assets/images/s91.png" alt="" />
+            <div class="s9-calendar">
+              <img src="./assets/icons/calendar.svg" alt="" />
+              <h2 style="margin-top: 0">08</h2>
+              <p style="color: #666c89" class="primary-text">September</p>
+            </div>
+            <div class="s9-item-title">
+              <p class="sit-title">
+                Inland freight a worthy solution for your business
+              </p>
+              <p style="color: #666c89" class="primary-text">
+                We are dedicated in creating added value for our customers by
+                implementing modern technology in our work.
+              </p>
+              <br />
+              <br />
+              <ul>
+                <li>Urgent transport solutions</li>
+                <li>Urgent transport solutions</li>
+                <li>Urgent transport solutions</li>
+                <li>Urgent transport solutions</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="section-10">
+        <img
+          style="margin-bottom: -10px"
+          width="100%"
+          src="./assets/images/s10-bg.png"
+          alt=""
+        />
+        <footer class="s10-footer">
+          <div>
+            <p class="primary-text">
+              Leverage agile frameworks to provide a <br />
+              robust synopsis for strategy collaborative <br />
+              thinking to further the overall value <br />
+              proposition.
+            </p>
+            <br />
+            <div class="footer-card-item">
+              <img width="50" src="./assets/icons/time_icon.svg" alt="" />
+              <p class="primary-text">
+                Mon - Sat 9.00 - 18.00 <br />
+                Sunday Closed
+              </p>
+            </div>
+            <br />
+            <div class="footer-card-item">
+              <img width="50" src="./assets/icons/email_icon.svg" alt="" />
+              <p class="primary-text">
+                Email <br />
+                contact@logistics.com
+              </p>
+            </div>
+          </div>
+          <div class="s10-links">
+            <a href="#">About Us </a>
+            <a href="#">About Us </a>
+            <a href="#">About Us </a>
+            <a href="#">About Us </a>
+            <a href="#">About Us </a>
+          </div>
+          <div class="s10-links">
+            <a href="#">About Us </a>
+            <a href="#">About Us </a>
+            <a href="#">About Us </a>
+            <a href="#">About Us </a>
+            <a href="#">About Us </a>
+          </div>
+          <div>
+            <input class="main-input" type="text" placeholder="Email here*" />
+            <br />
+            <div style="display: flex; align-items: center; gap: 20px">
+              <button
+                style="
+                  background: linear-gradient(
+                    127deg,
+                    #ffb629 0%,
+                    #ffda56 50.72%,
+                    #ffd7a6 100%
+                  );
+                "
+                class="secondary-btn"
+              >
+                Send now
+              </button>
+              <img src="./assets/icons/Linkdin.svg" alt="" />
+              <img src="./assets/icons/Twitter.svg" alt="" />
+              <img src="./assets/icons/Facebook.svg" alt="" />
+            </div>
+          </div>
         </footer>
       </section>
     </main>
